services/consul-1.yaml
apiVersion: v1
kind: Service
metadata:
  name: consul-1
  labels:
    name: consul-1
spec:
#  clusterIP: 10.7.240.101
  ports:
  - port: 8500
    targetPort: 8500
    name: http
  - port: 8400
    targetPort: 8400
    name: rpc
  - port: 8301
    targetPort: 8301
    name: serflan-tcp
    protocol: "TCP"
  - port: 8301
    targetPort: 8301
    name: serflan-udp
    protocol: "UDP"
  - port: 8302
    targetPort: 8302
    name: serfwan-tcp
    protocol: "TCP"
  - port: 8302
    targetPort: 8302
    name: serfwan-udp
    protocol: "UDP"
  - port: 8300
    targetPort: 8300
    name: server
  - port: 8600
    targetPort: 8600
    name: consuldns
#    - name: consuldns-udp
#      protocol: "UDP"
#      port: 8600
#      targetPort: 8600
  selector:
    app: consul
    member: consul-1
