services/consul-http.yaml
apiVersion: v1
kind: Service
metadata:
  name: consul-http
  labels:
    name: consul-http
spec:
  ports:
  - port: 80
    targetPort: 8500
    name: http
  selector:
    app: consul
