services/vault-service1.yaml
# Direct access to vault instance 1
apiVersion: v1
kind: Service
metadata:
  name: vault-1
  labels:
    app: vault
    instance: vault-1
spec:
  ports:
    - name: vaultport
      port: 8200
      targetPort: 8200
    # This should not be required, as the container IP should work for this.
    - name: backendport
      port: 8201
      targetPort: 8201
  selector:
    app: vault
    instance: vault-1
