services/vault-service2.yaml
apiVersion: v1
kind: Service
metadata:
  name: vault-2
  labels:
    app: vault
    instance: vault-2
spec:
  ports:
    - name: vaultport
      port: 8200
      targetPort: 8200
    - name: backendport
      port: 8201
      targetPort: 8201
  selector:
    app: vault
    instance: vault-2
