services/vault-services.yaml
# Front-end load-balancer service for vault instances
apiVersion: v1
kind: Service
metadata:
  name: vault-svc
  labels:
    app: vault
spec:
  ports:
  - port: 80
    targetPort: 8200
    name: vaultport
  selector:
    app: vault
