services/consul-ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: consul-ingress
  annotations:
    kubernetes.io/tls-acme: "true"
    kubernetes.io/ingress.class: "nginx"
    # type of authentication
    ingress.kubernetes.io/auth-type: basic
    # name of the secret that contains the user/password definitions
    ingress.kubernetes.io/auth-secret: basic-auth-users
    # message to display with an appropiate context why the authentication is required
    ingress.kubernetes.io/auth-realm: "Authentication Required Newbz"
spec:
  tls:
  - hosts:
    - consul.ncrcloud.pw
    secretName: consol-tls
  rules:
  - host: consul.ncrcloud.pw
    http:
      paths:
      - path: /
        backend:
          serviceName: consul-http-svc
          servicePort: 80
