services/vault-ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: vault-ingress
  annotations:
    kubernetes.io/tls-acme: "true"
    kubernetes.io/ingress.class: "nginx"
spec:
  tls:
  - hosts:
    - vault.ncrcloud.pw
    secretName: vaulttls
  rules:
  - host: vault.ncrcloud.pw
    http:
      paths:
      - path: /
        backend:
          serviceName: vault-svc
          servicePort: 80
